<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.salesforce.apollo</groupId>
    <artifactId>apollo.app</artifactId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>
  <artifactId>isolates</artifactId>
    <name>Isolates: Apollo Domain Shards</name>
    <description>Dynamic library for Apollo Domain Shards</description>

    <properties>
        <mainClass>com.salesforce.apollo.domain.Smokin</mainClass>
        <imageName>demesne</imageName>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.salesforce.apollo</groupId>
            <artifactId>demesnes</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
    </dependencies>

    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.7.0</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>java</id>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>${mainClass}</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>assemble-all</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>build-native</id>
                        <goals>
                            <goal>compile-no-fork</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                <configuration>
                    <sharedLibrary>true</sharedLibrary>
                    <buildArgs>
                         --enable-http
                         
                         --auto-fallback
                         
                         --add-modules java.sql.rowset
                         
                         --initialize-at-build-time=org.jooq
                         --initialize-at-build-time=javax.sql.rowset.RowSetProvider
                         --initialize-at-build-time=org.slf4j.LoggerFactory
                         --initialize-at-build-time=ch.qos.logback
                         --initialize-at-build-time=org.bouncycastle
                         
                         --initialize-at-run-time=io.netty.handler.ssl.BouncyCastleAlpnSslUtils
                         --initialize-at-run-time=org.jooq.impl.Convert$_JSON
                         --initialize-at-run-time=org.jooq.tools.Convert
                         --initialize-at-run-time=org.jooq.impl.Convert$_XML
                         --initialize-at-run-time=org.jooq.impl.DefaultRenderContext
                         --initialize-at-run-time=io.netty.util.AbstractReferenceCounted
                         --initialize-at-run-time=io.netty.channel.kqueue.KQueue
                         --initialize-at-run-time=io.netty.channel.kqueue.Native
                         --initialize-at-run-time=io.netty.channel.epoll.Native
                         --initialize-at-run-time=io.netty.channel.epoll.Epoll
                         --initialize-at-run-time=io.netty.channel.epoll.EpollEventLoop
                         --initialize-at-run-time=io.netty.channel.kqueue.KQueueEventLoop
                         --initialize-at-run-time=io.netty.channel.kqueue.KQueueEventArray
                         --initialize-at-run-time=io.netty.channel.epoll.EpollEventArray
                         --initialize-at-run-time=com.salesforce.apollo.domain.Demesne
                         
                         --trace-object-instantiation=com.fasterxml.jackson.databind.ObjectMapper 
                         --trace-class-initialization=jakarta.xml.bind.ContextFinder
                         --trace-class-initialization=org.slf4j.MDC
                         --trace-class-initialization=io.netty.channel.DefaultFileRegion
                         --trace-class-initialization=io.netty.channel.kqueue.KQueue
                         --trace-class-initialization=io.netty.util.AbstractReferenceCounted
                     </buildArgs>
                    <verbose>true</verbose>
                    <metadataRepository>
                        <enabled>true</enabled>
                    </metadataRepository> 
                    <classpath>
                        <param>${project.build.directory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</param>
                    </classpath>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>graalvm-reachability-metadata</artifactId>
                        <version>${native.maven.plugin.version}</version>
                        <classifier>repository</classifier>
                        <type>zip</type>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>
                                            org.apache.maven.plugins
                                        </groupId>
                                        <artifactId>
                                            maven-compiler-plugin
                                        </artifactId>
                                        <versionRange>
                                            [3.8.1,)
                                        </versionRange>
                                        <goals>
                                            <goal>testCompile</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>java-agent</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>java</executable>
                                    <workingDirectory>${project.build.directory}</workingDirectory>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath />
                                        <argument>${mainClass}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>native</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${project.build.directory}/${imageName}</executable>
                                    <workingDirectory>${project.build.directory}</workingDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>